drivers/interface/driver/ch347/include/CH347DLL.H

#define CH347_USB_HID 2
#define CH347_USB_VCP 3
//芯片功能接口类型
#define CH347_FUNC_UART 0
#define CH347_FUNC_SPI_IIC 1
#define CH347_FUNC_JTAG_IIC 2
#define CH347_FUNC_JTAG_IIC_SPI 3  // CH347F
// SPI控制器配置
typedef struct _SPI_CONFIG {
  UCHAR iMode;   // 0-3:SPI Mode0/1/2/3
  UCHAR iClock;  // 0=60MHz, 1=30MHz, 2=15MHz, 3=7.5MHz, 4=3.75MHz, 5=1.875MHz,
                 // 6=937.5KHz，7=468.75KHz
  UCHAR iByteOrder;              // 0=低位在前(LSB), 1=高位在前(MSB)
  USHORT iSpiWriteReadInterval;  // SPI接口常规读取写入数据命令，单位为uS
  UCHAR iSpiOutDefaultData;  // SPI读数据时默认输出数据
  ULONG iChipSelect;  // 片选控制, 位7为0则忽略片选控制, 位7为1则参数有效:
                      // 位1位0为00/01分别选择CS1/CS2引脚作为低电平有效片选
  UCHAR CS1Polarity;  // 位0：片选CS1极性控制：0：低电平有效；1：高电平有效；
  UCHAR CS2Polarity;  // 位0：片选CS2极性控制：0：低电平有效；1：高电平有效；
  USHORT iIsAutoDeativeCS;  // 操作完成后是否自动撤消片选
  USHORT iActiveDelay;  // 设置片选后执行读写操作的延时时间,单位us
  ULONG iDelayDeactive;  // 撤消片选后执行读写操作的延时时间,单位us
} mSpiCfgS, *mPSpiCfgS;
//设备信息
typedef struct _DEV_INFOR {
  UCHAR iIndex;                // 当前打开序号
  UCHAR DevicePath[MAX_PATH];  // 设备链接名,用于CreateFile
  UCHAR
      UsbClass;  // 驱动类别 0:CH347_USB_CH341, 2:CH347_USB_HID,3:CH347_USB_VCP
  UCHAR
      FuncType;  // 功能类别
                 // 0:CH347_FUNC_UART,1:CH347_FUNC_SPI_I2C,2:CH347_FUNC_JTAG_I2C
  CHAR DeviceID[64];  // USB\VID_xxxx&PID_xxxx
  UCHAR ChipMode;  // 芯片工作模式,0:Mode0(UART0/1); 1:Mode1(Uart1+SPI+I2C);
                   // 2:Mode2(HID Uart1+SPI+I2C) 3:Mode3(Uart1+Jtag+IIC)
                   // 4:CH347F(Uart*2+Jtag/SPI/IIC)
  HANDLE DevHandle;           // 设备句柄
  USHORT BulkOutEndpMaxSize;  // 批量上传端点大小
  USHORT BulkInEndpMaxSize;   // 批量下传端点大小
  UCHAR UsbSpeedType;         // USB速度类型，0:FS,1:HS,2:SS
  UCHAR CH347IfNum;  // USB接口号: CH347T: IF0:UART;   IF1:SPI/IIC/JTAG/GPIO
                     //            CH347F: IF0:UART0;  IF1:UART1; IF
                     //            2:SPI/IIC/JTAG/GPIO
  UCHAR DataUpEndp;  // 批量上传端点地址
  UCHAR DataDnEndp;  // 批量下传端点地址
  CHAR ProductString[64];       // USB产品字符串
  CHAR ManufacturerString[64];  // USB厂商字符串
  ULONG WriteTimeout;           // USB写超时
  ULONG ReadTimeout;            // USB读超时
  CHAR FuncDescStr[64];         // 接口功能描述符
  UCHAR FirewareVer;            // 固件版本,十六进制值
} mDeviceInforS, *mPDeviceInforS;
// CH347各模式公用函数,支持CH347所有模式下的打开、关闭、USB读、USB写，包含HID
//打开USB设备
HANDLE WINAPI CH347OpenDevice(ULONG DevI);
//关闭USB设备
BOOL WINAPI CH347CloseDevice(ULONG iIndex);
//获取设备信息
BOOL WINAPI CH347GetDeviceInfor(ULONG iIndex, mDeviceInforS *DevInformation);
// 获取驱动版本、库版本、设备版本、芯片类型(CH341(FS)/CH347HS)
BOOL WINAPI CH347GetVersion(ULONG iIndex, PUCHAR iDriverVer, PUCHAR iDLLVer,
                            PUCHAR ibcdDevice,
                            PUCHAR iChipType);  // CHIP_TYPE_CH341/7
typedef VOID(CALLBACK *mPCH347_NOTIFY_ROUTINE)(  // 设备插拔通知事件回调程序
    ULONG iEventStatus);  // 设备插拔事件和当前状态(在下行定义): 0=设备拔出事件,
// 设定设备事件通知程序
BOOL WINAPI CH347SetDeviceNotify(
    ULONG iIndex,     // 指定设备序号,0对应第一个设备
    PCHAR iDeviceID,  // 可选参数,指向字符串,指定被监控的设备的ID,字符串以\0终止
    mPCH347_NOTIFY_ROUTINE
        iNotifyRoutine);  // 指定设备事件回调程序,为NULL则取消事件通知,否则在检测到事件时调用该程序
// 读取USB数据块
BOOL WINAPI CH347ReadData(
    ULONG iIndex,  // 指定设备序号
    PVOID oBuffer,  // 指向一个足够大的缓冲区,用于保存读取的数据
    PULONG
        ioLength);  // 指向长度单元,输入时为准备读取的长度,返回后为实际读取的长度
// 写取USB数据块
BOOL WINAPI CH347WriteData(
    ULONG iIndex,   // 指定设备序号
    PVOID iBuffer,  // 指向一个缓冲区,放置准备写出的数据
    PULONG
        ioLength);  // 指向长度单元,输入时为准备写出的长度,返回后为实际写出的长度
// 设置USB数据读写的超时
BOOL WINAPI CH347SetTimeout(
    ULONG iIndex,  // 指定设备序号
    ULONG
        iWriteTimeout,  // 指定USB写出数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
    ULONG
        iReadTimeout);  // 指定USB读取数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
/***************SPI********************/
// SPI控制器初始化
BOOL WINAPI CH347SPI_Init(ULONG iIndex, mSpiCfgS *SpiCfg);
// CH347F设置SPI支持数据位数.
BOOL WINAPI
CH347SPI_SetDataBits(ULONG iIndex,
                     UCHAR iDataBits);  // iDataBits= 0:8bit, 1:16bit
//获取SPI控制器配置信息
BOOL WINAPI CH347SPI_GetCfg(ULONG iIndex, mSpiCfgS *SpiCfg);
//设置片选状态,使用前需先调用CH347SPI_Init对CS进行设置
BOOL WINAPI CH347SPI_ChangeCS(ULONG iIndex,    // 指定设备序号
                              UCHAR iStatus);  // 0=撤消片选,1=设置片选
//设置SPI片选
BOOL WINAPI CH347SPI_SetChipSelect(
    ULONG iIndex,          // 指定设备序号
    USHORT iEnableSelect,  // 低八位为CS1，高八位为CS2;
                           // 字节值为1=设置CS,为0=忽略此CS设置
    USHORT
        iChipSelect,  // 低八位为CS1，高八位为CS2;片选输出,0=撤消片选,1=设置片选
    ULONG
        iIsAutoDeativeCS,  // 低16位为CS1，高16位为CS2;操作完成后是否自动撤消片选
    ULONG
        iActiveDelay,  // 低16位为CS1，高16位为CS2;设置片选后执行读写操作的延时时间,单位us
    ULONG
        iDelayDeactive);  // 低16位为CS1，高16位为CS2;撤消片选后执行读写操作的延时时间,单位us
// SPI4写数据
BOOL WINAPI CH347SPI_Write(
    ULONG iIndex,  // 指定设备序号
    ULONG iChipSelect,  // 片选控制, 位7为0则忽略片选控制, 位7为1进行片选操作
    ULONG iLength,     // 准备传输的数据字节数
    ULONG iWriteStep,  // 准备读取的单个块的长度
    PVOID ioBuffer);  // 指向一个缓冲区,放置准备从MOSI写出的数据
// SPI4读数据.无需先写数据，效率较CH347SPI_WriteRead高很多
BOOL WINAPI CH347SPI_Read(
    ULONG iIndex,  // 指定设备序号
    ULONG iChipSelect,  // 片选控制, 位7为0则忽略片选控制, 位7为1进行片选操作
    ULONG oLength,   // 准备发出的字节数
    PULONG iLength,  // 准备读入的数据字节数
    PVOID
        ioBuffer);  // 指向一个缓冲区,放置准备从DOUT写出的数据,返回后是从DIN读入的数据
// 处理SPI数据流,4线接口
BOOL WINAPI CH347SPI_WriteRead(
    ULONG iIndex,  // 指定设备序号
    ULONG iChipSelect,  // 片选控制, 位7为0则忽略片选控制, 位7为1则操作片选
    ULONG iLength,  // 准备传输的数据字节数
    PVOID
        ioBuffer);  // 指向一个缓冲区,放置准备从DOUT写出的数据,返回后是从DIN读入的数据
// 处理SPI数据流,4线接口
BOOL WINAPI CH347StreamSPI4(
    ULONG iIndex,  // 指定设备序号
    ULONG iChipSelect,  // 片选控制, 位7为0则忽略片选控制, 位7为1则参数有效
    ULONG iLength,  // 准备传输的数据字节数
    PVOID
        ioBuffer);  // 指向一个缓冲区,放置准备从DOUT写出的数据,返回后是从DIN读入的数据
/***************GPIO********************/
//获取CH347的GPIO方向和引脚电平值
BOOL WINAPI CH347GPIO_Get(
    ULONG iIndex,  // 指定设备序号
    UCHAR *iDir,   // 引脚方向:GPIO0-7对应位0-7.0：输入；1：输出
    UCHAR *iData);  // GPIO0电平:GPIO0-7对应位0-7,0：低电平；1：高电平)
//设置CH347的GPIO方向和引脚电平值
BOOL WINAPI CH347GPIO_Set(
    ULONG iIndex,   // 指定设备序号
    UCHAR iEnable,  // 数据有效标志:对应位0-7,对应GPIO0-7.
    UCHAR
        iSetDirOut,  // 设置I/O方向,某位清0则对应引脚为输入,某位置1则对应引脚为输出.GPIO0-7对应位0-7.
    UCHAR
        iSetDataOut);  // 输出数据,如果I/O方向为输出,那么某位清0时对应引脚输出低电平,某位置1时对应引脚输出高电平
typedef VOID(CALLBACK *mPCH347_INT_ROUTINE)(  // 中断服务程序
    PUCHAR iStatus);  // 中断状态数据,参考下面的位说明
// 8个字节GPIO0-7引脚状态.每字节位定义如下:
// 位7：当前的GPIO0方向，0：输入；1：输出；
// 位6：当前的GPIO0电平，0：低电平；1：高电平；
// 位5：当前的GPIO0是否设置为中断，0：查询模式；1：中断模式；
// 位4-3：设置GPIO0的中断模式，00：下降沿触发；01：上升沿触发;10：双边沿触发；11:
// 保留; 位2-0：保留；

// 设定GPIO中断服务程序
BOOL WINAPI CH347SetIntRoutine(
    ULONG iIndex,  // 指定设备序号
    UCHAR Int0PinN,  // 中断0 GPIO引脚号,大于7:不启用此中断源; 为0-7对应gpio0-7
    UCHAR Int0TripMode,  // 中断0类型: 00:下降沿触发; 01:上升沿触发;
                         // 02:双边沿触发; 03:保留;
    UCHAR Int1PinN,  // 中断1 GPIO引脚号,大于7则不启用此中断源,为0-7对应gpio0-7
    UCHAR Int1TripMode,  // 中断1类型: 00:下降沿触发; 01:上升沿触发;
                         // 02:双边沿触发; 03:保留;
    mPCH347_INT_ROUTINE
        iIntRoutine);  // 指定中断服务程序,为NULL则取消中断服务,否则在中断时调用该程序
// 读取中断数据
BOOL WINAPI CH347ReadInter(
    ULONG iIndex,  // 指定设备序号
    PUCHAR
        iStatus);  // 指向8字节单元,分别为GPIO0-7引脚状态,每个字节位说明参考中断服务程序iStatus位说明
// 放弃中断数据读操作
BOOL WINAPI CH347AbortInter(ULONG iIndex);  // 指定设备序号
/**************HID/VCP串口**********************/
//打开串口
HANDLE WINAPI CH347Uart_Open(ULONG iIndex);
//关闭串口
BOOL WINAPI CH347Uart_Close(ULONG iIndex);
BOOL WINAPI CH347Uart_SetDeviceNotify(  // 设定设备事件通知程序
    ULONG iIndex,     // 指定设备序号,0对应第一个设备
    PCHAR iDeviceID,  // 可选参数,指向字符串,指定被监控的设备的ID,字符串以\0终止
    mPCH347_NOTIFY_ROUTINE
        iNotifyRoutine);  // 指定设备事件回调程序,为NULL则取消事件通知,否则在检测到事件时调用该程序
//设置UART配置
BOOL WINAPI CH347Uart_Init(
    ULONG iIndex,    // 指定设备序号
    DWORD BaudRate,  // 波特率
    UCHAR ByteSize,  // 数据位数(5,6,7,8,16)
    UCHAR Parity,  // 校验位(0：None; 1：Odd; 2：Even; 3：Mark; 4：Space)
    UCHAR StopBits,  // 停止位数(0：1停止位; 1：1.5停止位; 2：2停止位)；
    UCHAR ByteTimeout);  // 字节超时时间,单位100uS
// 设置USB数据读写的超时
BOOL WINAPI CH347Uart_SetTimeout(
    ULONG iIndex,  // 指定设备序号
    ULONG
        iWriteTimeout,  // 指定USB写出数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
    ULONG
        iReadTimeout);  // 指定USB读取数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
// 读取数据块
BOOL WINAPI CH347Uart_Read(
    ULONG iIndex,  // 指定设备序号
    PVOID oBuffer,  // 指向一个足够大的缓冲区,用于保存读取的数据
    PULONG
        ioLength);  // 指向长度单元,输入时为准备读取的长度,返回后为实际读取的长度
// 写出数据块
BOOL WINAPI CH347Uart_Write(
    ULONG iIndex,   // 指定设备序号
    PVOID iBuffer,  // 指向一个缓冲区,放置准备写出的数据
    PULONG
        ioLength);  // 指向长度单元,输入时为准备写出的长度,返回后为实际写出的长度
//查询读缓冲区有多少字节未取
BOOL WINAPI
CH347Uart_QueryBufUpload(ULONG iIndex,            // 指定设备序号
                         LONGLONG *RemainBytes);  // 读缓冲区未取字节数
// 设置USB数据读写的超时
BOOL WINAPI CH347Uart_SetTimeout(
    ULONG iIndex,  // 指定设备序号
    ULONG
        iWriteTimeout,  // 指定USB写出数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
    ULONG
        iReadTimeout);  // 指定USB读取数据块的超时时间,以毫秒mS为单位,0xFFFFFFFF指定不超时(默认值)
/********IIC***********/
// I2C设置
BOOL WINAPI CH347I2C_Set(ULONG iIndex,  // 指定设备序号
                         ULONG iMode);  // 指定模式,见下行
// 位1-位0: I2C接口速度/SCL频率,
// 00=低速/20KHz,01=标准/100KHz(默认值),10=快速/400KHz,11=高速/750KHz
// 其它保留,必须为0

// Set I2C Clock Stretch
BOOL WINAPI CH347I2C_SetStretch(
    ULONG iIndex,   // 指定设备序号
    BOOL iEnable);  // I2C Clock Stretch enable, 1:enable,0:disable
// 设置硬件异步延时,调用后很快返回,而在下一个流操作之前延时指定毫秒数
BOOL WINAPI CH347I2C_SetDelaymS(ULONG iIndex,   // 指定设备序号
                                ULONG iDelay);  // 指定延时的毫秒数
// 处理I2C数据流,2线接口,时钟线为SCL引脚,数据线为SDA引脚
BOOL WINAPI CH347StreamI2C(
    ULONG iIndex,        // 指定设备序号
    ULONG iWriteLength,  // 准备写出的数据字节数
    PVOID
        iWriteBuffer,  // 指向一个缓冲区,放置准备写出的数据,首字节通常是I2C设备地址及读写方向位
    ULONG iReadLength,   // 准备读取的数据字节数
    PVOID oReadBuffer);  // 指向一个缓冲区,返回后是读入的数据
BOOL WINAPI
CH347StreamI2C_RetACK(  // 处理I2C数据流,2线接口,时钟线为SCL引脚,数据线为SDA引脚(准双向I/O),速度约56K字节,并返回主机端获取到的ACK数量
    ULONG iIndex,       // 指定CH341设备序号
    ULONG iWriteLength,  // 准备写出的数据字节数
    PVOID
        iWriteBuffer,  // 指向一个缓冲区,放置准备写出的数据,首字节通常是I2C设备地址及读写方向位
    ULONG iReadLength,  // 准备读取的数据字节数
    PVOID oReadBuffer,  // 指向一个缓冲区,返回后是读入的数据
    PULONG rAckCount);  // 指向读写返回的ACK值
typedef enum _EEPROM_TYPE {  // EEPROM型号
  ID_24C01,
  ID_24C02,
  ID_24C04,
  ID_24C08,
  ID_24C16,
  ID_24C32,
  ID_24C64,
  ID_24C128,
  ID_24C256,
  ID_24C512,
  ID_24C1024,
  ID_24C2048,
  ID_24C4096
} EEPROM_TYPE;
// 从EEPROM中读取数据块,速度约56K字节
BOOL WINAPI
CH347ReadEEPROM(ULONG iIndex,           // 指定设备序号
                EEPROM_TYPE iEepromID,  // 指定EEPROM型号
                ULONG iAddr,            // 指定数据单元的地址
                ULONG iLength,          // 准备读取的数据字节数
                PUCHAR oBuffer);  // 指向一个缓冲区,返回后是读入的数据
// 向EEPROM中写入数据块
BOOL WINAPI
CH347WriteEEPROM(ULONG iIndex,           // 指定设备序号
                 EEPROM_TYPE iEepromID,  // 指定EEPROM型号
                 ULONG iAddr,            // 指定数据单元的地址
                 ULONG iLength,          // 准备写出的数据字节数
                 PUCHAR iBuffer);  // 指向一个缓冲区,放置准备写出的数据